# uniproxy

./: .gitignore  .scalafmt.conf  README.md  build.mill  build.sc  mill  pyproject.toml
docs/: cloudflare.md  misc.md
src/uniproxy/: _helpers.py  abc.py  base.py  common.py  protocols.py  providers.py  proxies.py  proxy_groups.py  rules.py  shared.py  typing.py  uri.py  utils.py
src/uniproxy/clash/: __init__.py  abc.py  base.py  conf.py  core.py  funcs.py  protocols.py  providers.py  proxy_groups.py  rules.py  typing.py
src/uniproxy/protocols/: base.py  naive.py  shadowsocks.py  std.py  trojan.py  tuic.py  vmess.py  wireguard.py
src/uniproxy/sing_box/: base.py  constants.py  data.py  dial.py  dns.py  inbounds.py  listen.py  multiplex.py  outbounds.py  route.py  shared.py  sing_box.py  sniff.py  tls.py  top.py  transport.py  typing.py
src/uniproxy/singbox/: __init__.py  _utils.py  base.py  dns.py  endpoints.py  inbounds.py  outbounds.py  preconf.py  route.py  shared.py  singbox.py  typing.py
src/uniproxy/surge/: __init__.py  base.py  protocols.py  providers.py  proxy_groups.py  rules.py  shared.py  std.py  trans.py  transformer.py  typing.py
tests/: test_proxies.py  test_proxy_groups.py  test_uri.py
tests/test_clash/: test_protocols.py  test_proxy_groups.py  test_rules.py
tests/test_protocols/: test_ss.py
tests/test_surge/: test_protocols.py  test_proxy_groups.py  test_rules.py
uniproxy/src/: abc.scala  rules.scala  typing.scala
uniproxy/src/clash/: abc.scala  base.scala  conf.scala  protocols.scala  proxy_groups.scala  rules.scala  typing.scala
uniproxy/src/singbox/: abc.scala  base.scala  conf.scala  dns.scala  endpoints.scala  inbounds.scala  outbounds.scala  preconf.scala  route.scala  shared.scala  tls.scala  transports.scala  typing.scala
uniproxy/src/surge/: abc.scala  base.scala  protocols.scala  rules.scala  typing.scala
uniproxy/test/src/: rules.scala
uniproxy/test/src/singbox/: rules.scala
