[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "uniproxy"
version = "0.0.1"
description = ""
readme = "README.md"
license = { text = "GPLv3" }
authors = [{ name = "Lanqing Huang", email = "lqhuang@outlook.com" }]
requires-python = ">=3.11"
dependencies = ["attrs", "tomlkit", "ruamel.yaml", 'xattrs']

[project.optional-dependencies]
dev = [
    "mypy>=1.11.2",
    "black>=24.10.0",
    "isort>=5.13.2",
    "ruff>=0.6.9",
    "typing-extensions>=4.12.2",
]
test = ["pytest>=8.3.3"]

[tool.isort]
profile = "black"
known_typing = [
    "typing",
    "typing_extensions",
    "collections.abc",
    'uniproxy.typing',
]
known_first_party = ["uniproxy"]
sections = [
    "FUTURE",
    "TYPING",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
