[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "uniproxy"
version = "0.0.1"
description = ""
readme = "README.md"
license = { text = "GPLv3" }
authors = [{ name = "Lanqing Huang", email = "lqhuang@outlook.com" }]
requires-python = ">=3.11"
dependencies = ["attrs", "tomlkit", "ruamel.yaml", 'xattrs']

[dependency-groups]
dev = ["mypy>=1.11.2", "ruff>=0.8.0", "typing-extensions>=4.12.2"]
test = ["pytest>=8.3.3"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 79
preview = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
unfixable = ["F401"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
section-order = [
    "future",
    "typing",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
[tool.ruff.lint.isort.sections]
typing = ["typing", "typing_extensions", "collections.abc", "uniproxy.typing"]
